--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -15,11 +15,13 @@
 @import 'normalize';
 
 // Everything else
-@import 'typography';
+@import 'prosilver';
 @import 'base';
-@import 'form-fields';
-@import 'vendors';
+@import 'typography';
+
+// @import 'form-fields';
+// @import 'vendors';
 @import 'header';
-@import 'layout';
-@import 'footer';
-@import 'responsive';
+// @import 'layout';
+// @import 'footer';
+// @import 'responsive';
