--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -71,62 +71,50 @@
 
 <!-- EVENT overall_header_body_before -->
 
-<header>
-    <nav>
-        <ul>
-            <li>Text 1</li>
-            <li>Text 2</li>
-            <li>Text 3</li>
-            <li>Text 4</li>
-            <li>Text 5</li>
-        </ul>
-    </nav>
-    <div class="header-content">
-        <h1>{SITENAME}</h1>
-        <h3>{SITE_DESCRIPTION}</h3>
-    </div>
-    <div class="header-overlay"></div>
-</header>
-
 <div id="wrap" class="wrap">
 	<a id="top" class="top-anchor" accesskey="t"></a>
-	<div id="page-header">
+	<header id="page-header">
 		<div class="headerbar" role="banner">
 		<!-- EVENT overall_header_headerbar_before -->
 			<div class="inner">
+				<!-- INCLUDE navbar_top.html -->
 
-			<div id="site-description" class="site-description">
-				<a id="logo" class="logo" href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->"><span class="site_logo"></span></a>
-				<h1>{SITENAME}</h1>
-				<p>{SITE_DESCRIPTION}</p>
-				<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
-			</div>
+				<div id="site-description" class="site-description">
+					<h1>
+						<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
+					</h1>
+					<h3>{SITE_DESCRIPTION}</h3>
+					<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
+				</div>
 
-			<!-- EVENT overall_header_searchbox_before -->
-			<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
-			<div id="search-box" class="search-box search-header" role="search">
-				<form action="{U_SEARCH}" method="get" id="search">
-				<fieldset>
-					<input name="keywords" id="keywords" type="search" maxlength="128" title="{L_SEARCH_KEYWORDS}" class="inputbox search tiny" size="20" value="{SEARCH_WORDS}" placeholder="{L_SEARCH_MINI}" />
-					<button class="button button-search" type="submit" title="{L_SEARCH}">
-						<i class="icon fa-search fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH}</span>
-					</button>
-					<a href="{U_SEARCH}" class="button button-search-end" title="{L_SEARCH_ADV}">
-						<i class="icon fa-cog fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH_ADV}</span>
-					</a>
-					{S_SEARCH_HIDDEN_FIELDS}
-				</fieldset>
-				</form>
-			</div>
-			<!-- ENDIF -->
-			<!-- EVENT overall_header_searchbox_after -->
+				<!-- EVENT overall_header_searchbox_before -->
+				<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
+				<div id="search-box" class="search-box search-header" role="search">
+					<form action="{U_SEARCH}" method="get" id="search">
+					<fieldset>
+						<input name="keywords" id="keywords" type="search" maxlength="128" title="{L_SEARCH_KEYWORDS}" class="inputbox search tiny" size="20" value="{SEARCH_WORDS}" placeholder="{L_SEARCH_MINI}" />
+						<button class="button button-search" type="submit" title="{L_SEARCH}">
+							<i class="icon fa-search fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH}</span>
+						</button>
+						<a href="{U_SEARCH}" class="button button-search-end" title="{L_SEARCH_ADV}">
+							<i class="icon fa-cog fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH_ADV}</span>
+						</a>
+						{S_SEARCH_HIDDEN_FIELDS}
+					</fieldset>
+					</form>
+				</div>
+				<!-- ENDIF -->
+				<!-- EVENT overall_header_searchbox_after -->
+
+				<div class="header-overlay"></div>
 
 			</div>
 			<!-- EVENT overall_header_headerbar_after -->
 		</div>
 		<!-- EVENT overall_header_navbar_before -->
-		<!-- INCLUDE navbar_header.html -->
-	</div>
+	</header>
+
+	<!-- INCLUDE navbar_header.html -->	
 
 	<!-- EVENT overall_header_page_body_before -->
 
