--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -57,7 +57,7 @@ header#page-header .headerbar {
 /* Header - Nav top
 ========================================================================== */
 
-header#page-header .headerbar .nav-top {
+header#page-header .navbar {
 	background: rgba(13,23,27,0.75);
 	border-top: 1px solid $color-03;
 	border-bottom: 1px solid $color-04;
