--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -11,6 +11,12 @@
 	color: $color-02;
 }}
 
+fieldset {
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+
 input[type='text'], input[type='password'], input[type='email'], input[type='url'], input[type='button'], input[type='reset'], input[type='submit'], button, textarea {
 	outline: 0;
 }
