--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -18,10 +18,9 @@
 @import 'prosilver';
 @import 'base';
 @import 'typography';
-
-// @import 'form-fields';
+@import 'form-fields';
 // @import 'vendors';
+@import 'layout';
 @import 'header';
-// @import 'layout';
-// @import 'footer';
+@import 'footer';
 // @import 'responsive';
