--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -14,16 +14,12 @@ header#page-header .headerbar {
 	height: 550px;
 	overflow: hidden;
 	position: relative;
-	.inner {
-		padding: 0 20px;
-	}
-	.inner, .site-description {
-		height: 100%;
-	}
+	padding: 0 20px;
 	.site-description {
 		@include flex-flow(column nowrap);
 		justify-content: center;
 		text-align: center;
+		height: 100%;
 		h1, p {
 			margin: 0;
 		}
@@ -32,7 +28,7 @@ header#page-header .headerbar {
 			font-size: 90px;
 			font-variant: none;
 			line-height: 1;
-			text-shadow: 3px 2px 0 rgba(0,0,0,0.65);
+			text-shadow: 3px 2px 0 rgba($color-02, 0.65);
 			a:hover {
 				color: $color-01;
 			}
@@ -40,7 +36,7 @@ header#page-header .headerbar {
 		h3 {
 			font-family: $font-02;  
 			font-size: 30px;
-			text-shadow: 2px 1px 0 rgba(0,0,0,0.85);
+			text-shadow: 2px 1px 0 rgba($color-02, 0.85);
 			letter-spacing: 2px;
 		}		
 	}
@@ -58,27 +54,27 @@ header#page-header .headerbar {
 ========================================================================== */
 
 header#page-header .navbar {
-	background: rgba(13,23,27,0.75);
-	border-top: 1px solid $color-03;
-	border-bottom: 1px solid $color-04;
+	background: rgba($color-05, 0.75);
+	border-bottom: 1px solid $color-03;
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
 	z-index: 20;	
-	 & > ul {
+	& > ul {
 		margin: 0;
 		list-style: none;
 		text-align: center;
 		justify-content: center;
 		@include flex-flow(row nowrap);
-		li {			
-			a {
+		& > li {	
+			position: relative;		
+			& > a {
 				padding: 10px 20px;
 				display: block;
 				color: $color-01;
 			}
-			.icon {
+			& > .icon {
 				display: block;
 				@include sizing(20px, 20px);
 				line-height: 20px;
@@ -86,22 +82,31 @@ header#page-header .navbar {
 				top: 11px;
 				right: 5px;
 				z-index: 10;
-				cursor: pointer;
 				// Setting the variable here to use multiple transitions
 				$transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 				@include transition($transform);
 				transform: rotate(0deg);
 			}
-			a:hover, .icon:hover {
+			& > a:hover, & > .icon:hover {
 				color: $color-06;
 			}
-			&.dropdown-container {
-				a {
-					padding: 10px 40px 10px 20px;
-				}
+			&.dropdown-container > a {
+				padding: 10px 40px 10px 20px;
 			}
-			&.dropdown-visible .icon {
+			&.dropdown-visible > .icon {
 				transform: rotate(180deg);
+			}
+			.dropdown {
+				text-align: left;
+				top: 45px;
+				background: $color-03;
+				border-bottom: 3px solid $color-04;
+				.dropdown-contents li a {
+					color: $color-01;
+					&:hover {
+						color: $color-06;
+					}
+				}
 			}
 		}
 	}	
