--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -2,9 +2,8 @@
 ========================================================================== */
 
 .wrapper {
+	max-width: 1300px;
 	margin: 0 auto;
-	max-width: 1320px;
-	width: auto;
 	padding: 0 20px;
 }
 
@@ -27,23 +26,37 @@
 	}
 }
 
-/* Layout - Content - Two columns
+/* Dropdown
 ========================================================================== */
 
-.content {
-	margin: 30px 0;
-	.wrapper {
-		@include flex-flow(row nowrap);
+.dropdown-container {
+	position: relative;
+	.dropdown-toggle {
+		cursor: pointer;
 	}
-	article {
-		@include flex(base);
+	.dropdown {
+		opacity: 0;
+		@include transition(opacity 0.5s ease-in-out);
+		display: block !important;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		margin: 0 !important;
+		padding: 10px 20px;
+		.dropdown-contents {
+			list-style: none;
+			margin: 0 0 -3px 0;
+			min-width: 100px;
+			li a {
+				display: block;
+				padding: 0 0 3px 0;
+				white-space: nowrap; 
+			}
+		}
 	}
-	aside {
+	&.dropdown-visible .dropdown {
+		opacity: 1;
+		z-index: 2;
 	}
-}
-
-/* Layout - Content - Two columns - Article
-========================================================================== */
-
-.content article {
 }
