--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
@@ -84,14 +84,6 @@ ul.rightside {
 	text-align: right;
 }
 
-li.responsive-menu.dropdown-right .dropdown {
-	left: -9px;
-}
-
-li.responsive-menu.dropdown-left .dropdown {
-	right: -6px;
-}
-
 /* Bulletin icons for list items
 ----------------------------------------*/
 
@@ -126,153 +118,8 @@ a.header-avatar span:after {
 	vertical-align: top;
 }
 
-/* Dropdown menu
-----------------------------------------*/
-.dropdown-container {
-	position: relative;
-}
-
-.dropdown-container-right {
-	float: right;
-}
-
-.dropdown-container-left {
-	float: left;
-}
-
-.nojs .dropdown-container:hover .dropdown {
-	display: block !important;
-}
-
-.dropdown {
-	display: none;
-	position: absolute;
-	left: 0;
-	top: 1.2em;
-	z-index: 2;
-	border: 1px solid transparent;
-	border-radius: 5px;
-	padding: 9px 0 0;
-	margin-right: -500px;
-}
-
-.dropdown.live-search {
-	top: auto;
-}
-
-.dropdown-container.topic-tools {
-	float: left;
-}
-
-.dropdown-up .dropdown {
-	top: auto;
-	bottom: 1.2em;
-	padding: 0 0 9px;
-}
-
-.dropdown-left .dropdown, .nojs .rightside .dropdown {
-	left: auto;
-	right: 0;
-	margin-left: -500px;
-	margin-right: 0;
-}
-
-.dropdown-button-control .dropdown {
-	top: 24px;
-}
-
-.dropdown-button-control.dropdown-up .dropdown {
-	top: auto;
-	bottom: 24px;
-}
-
-.dropdown .pointer, .dropdown .pointer-inner {
-	position: absolute;
-	width: 0;
-	height: 0;
-	border-top-width: 0;
-	border-bottom: 10px solid transparent;
-	border-left: 10px dashed transparent;
-	border-right: 10px dashed transparent;
-	-webkit-transform: rotate(360deg); /* better anti-aliasing in webkit */
-	display: block;
-}
-
-.dropdown-up .pointer, .dropdown-up .pointer-inner {
-	border-bottom-width: 0;
-	border-top: 10px solid transparent;
-}
-
-.dropdown .pointer {
-	right: auto;
-	left: 10px;
-	top: -1px;
-	z-index: 3;
-}
-
-.dropdown-up .pointer {
-	bottom: -1px;
-	top: auto;
-}
-
-.dropdown-left .dropdown .pointer, .nojs .rightside .dropdown .pointer {
-	left: auto;
-	right: 10px;
-}
-
-.dropdown .pointer-inner {
-	top: auto;
-	bottom: -11px;
-	left: -10px;
-}
-
-.dropdown-up .pointer-inner {
-	bottom: auto;
-	top: -11px;
-}
-
-.dropdown .dropdown-contents {
-	z-index: 2;
-	overflow: hidden;
-	overflow-y: auto;
-	border: 1px solid transparent;
-	border-radius: 5px;
-	padding: 5px;
-	position: relative;
-	max-height: 300px;
-}
-
-.dropdown-contents a {
-	display: block;
-	padding: 5px;
-}
-
 .jumpbox {
 	margin: 5px 0;
-}
-
-.jumpbox .dropdown li {
-	border-top: 1px solid transparent;
-}
-
-.jumpbox .dropdown-select {
-	margin: 0;
-}
-
-.jumpbox .dropdown-contents {
-	padding: 0;
-	text-decoration: none;
-}
-
-.jumpbox .dropdown-contents li {
-	padding: 0;
-}
-
-.jumpbox .dropdown-contents a {
-	margin-right: 20px;
-	padding: 5px 10px;
-	text-decoration: none;
-	width: 100%;
 }
 
 .jumpbox .spacer {
@@ -282,69 +129,6 @@ a.header-avatar span:after {
 
 .jumpbox .spacer + .spacer {
 	width: 20px;
-}
-
-.dropdown-contents a {
-	display: block;
-	padding: 5px;
-}
-
-.jumpbox .dropdown-select {
-	margin: 0;
-}
-
-.jumpbox .dropdown-contents a {
-	text-decoration: none;
-}
-
-.dropdown li {
-	display: list-item;
-	border-top: 1px dotted transparent;
-	float: none !important;
-	line-height: normal !important;
-	font-size: 1em !important;
-	list-style: none;
-	margin: 0;
-	white-space: nowrap;
-	text-align: left;
-}
-
-.dropdown-contents > li {
-	padding-right: 15px;
-}
-
-.dropdown-nonscroll > li {
-	padding-right: 0;
-}
-
-.dropdown li:first-child, .dropdown li.separator + li, .dropdown li li {
-	border-top: 0;
-}
-
-.dropdown li li:first-child {
-	margin-top: 4px;
-}
-
-.dropdown li li:last-child {
-	padding-bottom: 0;
-}
-
-.dropdown li li {
-	border-top: 1px dotted transparent;
-	padding-left: 18px;
-}
-
-.wrap .dropdown li, .dropdown.wrap li, .dropdown-extended li {
-	white-space: normal;
-}
-
-.dropdown li.separator {
-	border-top: 1px solid transparent;
-	padding: 0;
-}
-
-.dropdown li.separator:first-child, .dropdown li.separator:last-child {
-	display: none !important;
 }
 
 /* Responsive breadcrumbs
@@ -665,66 +449,6 @@ fieldset.fields1 dl.pmlist dd.recipients {
 
 /* jQuery popups
 ---------------------------------------- */
-.phpbb_alert {
-	border: 1px solid transparent;
-	display: none;
-	left: 0;
-	padding: 0 25px 20px 25px;
-	position: fixed;
-	right: 0;
-	top: 150px;
-	z-index: 50;
-	width: 620px;
-	margin: 0 auto;
-}
-
-@media only screen and (max-height: 500px), only screen and (max-device-width: 500px)
-{
-	.phpbb_alert {
-		top: 25px;
-	}
-}
-
-.phpbb_alert .alert_close {
-	float: right;
-	margin-right: -36px;
-	margin-top: -8px;
-}
-
-.phpbb_alert p {
-	margin: 8px 0;
-	padding-bottom: 8px;
-}
-
-.phpbb_alert label {
-	display: block;
-	margin: 8px 0;
-	padding-bottom: 8px;
-}
-
-.phpbb_alert div.alert_text > p,
-.phpbb_alert div.alert_text > label,
-.phpbb_alert div.alert_text > select,
-.phpbb_alert div.alert_text > textarea,
-.phpbb_alert div.alert_text > input {
-	font-size: 1.1em;
-}
-
-.darkenwrapper {
-	display: none;
-	position: relative;
-	z-index: 44;
-}
-
-.darken {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 0.5;
-	z-index: 45;
-}
 
 .loading_indicator {
 	background: center center no-repeat;
@@ -743,10 +467,6 @@ fieldset.fields1 dl.pmlist dd.recipients {
 
 /* Miscellaneous styles
 ---------------------------------------- */
-.copyright {
-	padding: 5px;
-	text-align: center;
-}
 
 .small {
 	font-size: 0.9em !important;
@@ -843,95 +563,6 @@ form > p.post-notice strong {
 	font-size: 0.95em;
 }
 
-.dropdown-extended {
-	display: none;
-	z-index: 1;
-}
-
-.dropdown-extended ul {
-	max-height: 350px;
-	overflow-y: auto;
-	overflow-x: hidden;
-	clear: both;
-}
-
-.dropdown-extended ul li {
-	padding: 0;
-	margin: 0 !important;
-	float: none;
-	border-top: 1px solid;
-	list-style-type: none;
-	font-size: 0.95em;
-	clear: both;
-	position: relative;
-}
-
-.dropdown-extended ul li:first-child {
-	border-top: none;
-}
-
-.dropdown-extended ul li.no_notifications {
-	padding: 10px;
-}
-
-.dropdown-extended .dropdown-contents {
-	max-height: none;
-	padding: 0;
-	position: absolute;
-	width: 340px;
-}
-
-.nojs .dropdown-extended .dropdown-contents {
-	position: relative;
-}
-
-.dropdown-extended .header {
-	padding: 0 10px;
-	font-family: Arial, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: bold;
-	text-align: left;
-	text-shadow: 1px 1px 1px white;
-	text-transform: uppercase;
-	line-height: 3em;
-	border-bottom: 1px solid;
-	border-radius: 5px 5px 0 0;
-}
-
-.dropdown-extended .header .header_settings {
-	float: right;
-	font-weight: normal;
-	text-transform: none;
-}
-
-.dropdown-extended .header .header_settings a {
-	display: inline-block;
-	padding: 0 5px;
-}
-
-.dropdown-extended .header:after {
-	content: '';
-	display: table;
-	clear: both;
-}
-
-.dropdown-extended .footer {
-	text-align: center;
-	font-size: 1.1em;
-}
-
-.dropdown-extended ul li a, .dropdown-extended ul li.no-url {
-	padding: 8px;
-}
-
-.dropdown-extended .footer > a {
-	padding: 5px 0;
-}
-
-.dropdown-extended ul li a, .notification_list dt > a, .dropdown-extended .footer > a {
-	display: block;
-	text-decoration: none;
-}
-
 .notification_list ul li img {
 	float: left;
 	max-height: 50px;
@@ -1006,29 +637,6 @@ form > p.post-notice strong {
 	display: none;
 }
 
-/* Navbar specific list items
-----------------------------------------*/
-
-.dropdown-page-jump .dropdown {
-	top: 20px;
-}
-
-.dropdown-page-jump.dropdown-up .dropdown {
-	bottom: 20px;
-}
-
-.dropdown-page-jump input.tiny {
-	width: 50px;
-}
-
-.dropdown .clone.hidden + li.separator {
-	display: none;
-}
-
-.dropdown .clone.hidden + li {
-	border-top: none;
-}
-
 /* Links
 ========================================================================== */
 
@@ -1049,30 +657,6 @@ form > p.post-notice strong {
 
 .forumbg .header a:hover, .forabg .header a:hover, th a:hover {
 	text-decoration: underline;
-}
-
-/* Notification mark read link */
-.dropdown-extended a.mark_read {
-	background-position: center center;
-	background-repeat: no-repeat;
-	border-radius: 3px 0 0 3px;
-	display: none;
-	margin-top: -20px;
-	position: absolute;
-	z-index: 2;
-	right: 0;
-	top: 50%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
-.dropdown-extended li:hover a.mark_read {
-	display: block;
-}
-
-.dropdown-extended a.mark_read:hover {
-	width: 50px;
 }
 
 .jumpbox-cat-link,
@@ -1919,16 +1503,8 @@ dd.profile-contact {
 	overflow: visible;
 }
 
-.profile-contact .dropdown-container {
-	display: inline-block;
-}
-
 .profile-contact .icon_contact {
 	vertical-align: middle;
-}
-
-.profile-contact .dropdown {
-	margin-right: -14px;
 }
 
 .online {
@@ -1997,25 +1573,6 @@ div.dl_links {
 
 table.fixed-width-table {
 	table-layout: fixed;
-}
-
-/* Show scrollbars for items with overflow on iOS devices
-----------------------------------------*/
-.postbody .content::-webkit-scrollbar, .topicreview::-webkit-scrollbar, .post_details::-webkit-scrollbar, .codebox code::-webkit-scrollbar, .attachbox dd::-webkit-scrollbar, .attach-image::-webkit-scrollbar, .dropdown-extended ul::-webkit-scrollbar {
-	width: 8px;
-	height: 8px;
-	-webkit-appearance: none;
-	background: rgba(0, 0, 0, .1);
-	border-radius: 3px;
-}
-
-.postbody .content::-webkit-scrollbar-thumb, .topicreview::-webkit-scrollbar-thumb, .post_details::-webkit-scrollbar-thumb, .codebox code::-webkit-scrollbar-thumb, .attachbox dd::-webkit-scrollbar-thumb, .attach-image::-webkit-scrollbar-thumb, .dropdown-extended ul::-webkit-scrollbar-thumb {
-	background: rgba(0, 0, 0, .3);
-	border-radius: 3px;
-}
-
-#memberlist tr.inactive, #team tr.inactive {
-	font-style: italic;
 }
 
 /* Buttons
@@ -2094,11 +1651,6 @@ table.fixed-width-table {
 
 /* Poster contact icons
 ----------------------------------------*/
-.contact-icons.dropdown-contents {
-	min-width: 0;
-	padding: 0;
-	font-size: 0;
-}
 
 .contact-icon {
 	background-repeat: no-repeat;
@@ -2161,16 +1713,6 @@ table.fixed-width-table {
 }
 
 /* Responsive buttons in post body */
-.post-buttons .dropdown {
-	top: 18px;
-}
-
-.post-buttons .dropdown a {
-	display: block;
-	font-size: 1.2em;
-	text-align: right;
-}
-
 .hasjs .postbody .post-buttons {
 	max-width: 40%;
 }
@@ -2189,16 +1731,8 @@ button::-moz-focus-inner {
 	background-image: none;
 }
 
-.dropdown .small-icon {
-	background-position: 5px 50%;
-	padding: 5px;
-}
-
 .small-icon > a {
 	padding: 0 0 0 18px;
-}
-.dropdown .small-icon > a {
-	display: block;
 }
 
 .rtl .small-icon {
@@ -2399,31 +1933,6 @@ ul.cplist {
 	border-bottom: 0.125em solid transparent;
 	border-top: 0.375em double transparent;
 }
-
-.tabs .dropdown, .minitabs .dropdown {
-	top: 20px;
-	margin-right: -2px;
-	font-size: 1.1em;
-	font-weight: normal;
-}
-
-.minitabs .dropdown {
-	margin-right: -4px;
-}
-
-.tabs .dropdown-up .dropdown, .minitabs .dropdown-up .dropdown {
-	bottom: 20px;
-	top: auto;
-}
-
-.tabs .dropdown li {
-	text-align: right;
-}
-
-.minitabs .dropdown li {
-	text-align: left;
-}
-
 /* UCP navigation menu
 ----------------------------------------*/
 /* Container for sub-navigation list */
@@ -2589,11 +2098,6 @@ ol.def-rules li {
 
 /* General form styles
 ----------------------------------------*/
-fieldset {
-	border-width: 0;
-	font-family: Verdana, Helvetica, Arial, sans-serif;
-	font-size: 1.1em;
-}
 
 input {
 	font-weight: normal;
@@ -2769,24 +2273,6 @@ fieldset.display-options a {
 	margin-top: 3px;
 }
 
-.dropdown fieldset.display-options {
-	font-size: 1em;
-	margin: 0;
-	padding: 0;
-}
-
-.dropdown fieldset.display-options label {
-	display: block;
-	margin: 4px;
-	padding: 0;
-	text-align: right;
-	white-space: nowrap;
-}
-
-.dropdown fieldset.display-options select {
-	min-width: 120px;
-}
-
 /* Display actions for ucp and mcp pages */
 fieldset.display-actions {
 	text-align: right;
@@ -2813,17 +2299,6 @@ fieldset.forum-selection {
 fieldset.forum-selection2 {
 	margin: 13px 0 3px 0;
 	float: right;
-}
-
-/* Submit button fieldset */
-fieldset.submit-buttons {
-	text-align: center;
-	vertical-align: middle;
-	margin: 5px 0;
-}
-
-fieldset.submit-buttons input {
-	vertical-align: middle;
 }
 
 /* Posting page styles
@@ -3033,7 +2508,7 @@ input.search {
   	font-style: normal;
   	font-variant: normal;
   	font-family: FontAwesome;
-  	font-size: 14px;
+  	font-size: rem(16px);
   	line-height: 1;
   	text-rendering: auto; /* optimizelegibility throws things off #1094 */
   	-webkit-font-smoothing: antialiased;
@@ -3084,20 +2559,6 @@ input.search {
 	margin-right: -5px;
 }
 
-.post-buttons .dropdown-contents .icon {
-    float: right;
-    margin-left: 5px;
-}
-
-.alert_close .icon:before {
-	padding: 0;
-    border-radius: 50%;
-    width: 11px;
-    display: block;
-    line-height: .9;
-    height: 12px;
-}
-
 /* Colours
 ========================================================================== */
 
@@ -3113,11 +2574,6 @@ Colours and backgrounds for links.css
 
 .forumbg .header a:hover, .forabg .header a:hover, th a:hover {
 	color: #A8D8FF;
-}
-
-/* Notification mark read link */
-.dropdown-extended a.mark_read {
-	background-color: #FFFFFF;
 }
 
 /* Post body links */
@@ -3296,14 +2752,9 @@ dl.details dd {
 	color: #333333;
 }
 
-.alert_close .icon:before {
-	background-color: #FFFFFF;
-}
+
 
 /* Jumpbox */
-.jumpbox .dropdown li {
-	border-top-color: #CCCCCC;
-}
 
 .jumpbox-cat-link {
 	background-color: #0076b1;
@@ -3325,10 +2776,6 @@ dl.details dd {
 	background-color: #F6F4D0;
 }
 
-.jumpbox .dropdown .pointer-inner {
-	border-color: #E1EBF2 transparent;
-}
-
 .jumpbox-sub-link {
 	background-color: #E1EBF2;
 }
@@ -3339,11 +2786,6 @@ dl.details dd {
 
 /* Miscellaneous styles
 ---------------------------------------- */
-
-.copyright {
-	color: #555555;
-}
-
 .error {
 	color: #BC2A4D;
 }
@@ -3711,7 +3153,7 @@ Colours and backgrounds for buttons.css
 	color: #FFFFFF;
 }
 
-.pagination li a:hover, .pagination li a:hover .icon, .pagination .dropdown-visible a.dropdown-trigger, .nojs .pagination .dropdown-container:hover a.dropdown-trigger {
+.pagination li a:hover, .pagination li a:hover .icon {
 	background: #368AD2;
 	border-color: #368AD2;
 	filter: none;
@@ -4137,73 +3579,10 @@ input.disabled {
 
 /* jQuery popups
 ---------------------------------------- */
-.phpbb_alert {
-	background-color: #FFFFFF;
-	border-color: #999999;
-}
-.darken {
-	background-color: #000000;
-}
 
 .loading_indicator {
 	background-color: #000000;
 	background-image: url("./images/loading.gif");
-}
-
-.dropdown-extended ul li {
-	border-top-color: #B9B9B9;
-}
-
-.dropdown-extended ul li:hover {
-	background-color: #CFE1F6;
-	color: #000000;
-}
-
-.dropdown-extended .header, .dropdown-extended .footer {
-	border-color: #B9B9B9;
-	color: #000000;
-}
-
-.dropdown-extended .footer {
-	border-top-style: solid;
-	border-top-width: 1px;
-}
-
-.dropdown-extended .header {
-	background-color: #F1F8FF; /* Old browsers */ /* FF3.6+ */
-	background-image: -webkit-linear-gradient(top, #F1F8FF 0%, #CADCEB 100%);
-	background-image: linear-gradient(to bottom, #F1F8FF 0%,#CADCEB 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F1F8FF', endColorstr='#CADCEB',GradientType=0 ); /* IE6-9 */
-}
-
-.dropdown .pointer {
-	border-color: #B9B9B9 transparent;
-}
-
-.dropdown .pointer-inner {
-	border-color: #FFF transparent;
-}
-
-.dropdown-extended .pointer-inner {
-	border-color: #F1F8FF transparent;
-}
-
-.dropdown .dropdown-contents {
-	background: #fff;
-	border-color: #B9B9B9;
-	box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.2);
-}
-
-.dropdown-up .dropdown-contents {
-	box-shadow: 1px 0 5px rgba(0, 0, 0, 0.2);
-}
-
-.dropdown li, .dropdown li li {
-	border-color: #DCDCDC;
-}
-
-.dropdown li.separator {
-	border-color: #DCDCDC;
 }
 
 /* Notifications
@@ -4237,11 +3616,6 @@ li.notification-reported strong, li.notification-disapproved strong {
 
 /* Notifications list
 ----------------------------------------*/
-@media (max-width: 350px) {
-	.dropdown-extended .dropdown-contents {
-		width: auto;
-	}
-}
 
 @media (max-width: 430px) {
 	.action-bar .search-box .inputbox {
@@ -4325,10 +3699,6 @@ li.notification-reported strong, li.notification-disapproved strong {
 	.attach-controls {
 		margin-top: 5px;
 		width: 100%;
-	}
-
-	.quick-links .dropdown-trigger span {
-		display: none;
 	}
 }
 
@@ -4728,11 +4098,6 @@ li.notification-reported strong, li.notification-disapproved strong {
 
 	fieldset.display-actions {
 		white-space: normal;
-	}
-
-	.phpbb_alert {
-		width: auto;
-		margin: 0 5px;
 	}
 
 	.attach-comment dfn {
