--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -10,12 +10,12 @@ $images: $assets + '/images/';
 
 $color-01: #ffffff; // white
 $color-02: #000000; // black
-$color-03: #0d1619; // very dark blue
-$color-04: #1e2f43; // very dark blue
-$color-05: #15212c; // very dark blue
+$color-03: #1e2f43; // very dark blue
+$color-04: #15212c; // very dark blue
+$color-05: #0d171b; // very dark blue
 $color-06: #a4c27e; // green
 $color-07: #7ea8c2; // blue
-$color-08: #333333; // 
+$color-08: #333333; // blackish
 $color-09: #333333; // 
 $color-10: #333333; // 
 $color-11: #333333; // 
