--- a/khyeras/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/styles/khyeras_v1/template/navbar_header.html
@@ -27,7 +27,21 @@
 			</div>
 		</li>
 		<li class="dropdown-container">
-			<a href="http://google.com"><span>Game Play &amp; Lore</span></a>
+			<a href="http://google.com"><span>Game Play</span></a>
+			<i class="icon icon-lg fa-chevron-down dropdown-trigger"></i>
+			<div class="dropdown">
+				<ul class="dropdown-contents" role="menu">
+					<li>
+						<a href="http://google.com" role="menuitem"><span>Leveling</span></a>
+					</li>
+					<li>
+						<a href="http://google.com" role="menuitem"><span>Classes</span></a>
+					</li>	
+				</ul>
+			</div>
+		</li>	
+		<li class="dropdown-container">
+			<a href="http://google.com"><span>Lore</span></a>
 			<i class="icon icon-lg fa-chevron-down dropdown-trigger"></i>
 			<div class="dropdown">
 				<ul class="dropdown-contents" role="menu">
@@ -50,17 +64,11 @@
 						<a href="http://google.com" role="menuitem"><span>Magic</span></a>
 					</li>
 					<li>
-						<a href="http://google.com" role="menuitem"><span>Leveling</span></a>
-					</li>
-					<li>
-						<a href="http://google.com" role="menuitem"><span>Classes</span></a>
-					</li>
-					<li>
 						<a href="http://google.com" role="menuitem"><span>Glossary</span></a>
 					</li>																										
 				</ul>
 			</div>
-		</li>		
+		</li>			
 		<li class="dropdown-container">
 			<a href="http://google.com"><span>Setting</span></a>
 			<i class="icon icon-lg fa-chevron-down dropdown-trigger"></i>
@@ -117,6 +125,11 @@
 								<a href="{U_SEARCH_ACTIVE_TOPICS}" role="menuitem"><span>{L_SEARCH_ACTIVE_TOPICS}</span></a>
 							</li>
 					<!-- ENDIF -->
+					<!-- IF U_WATCH_FORUM_LINK and not S_IS_BOT -->
+						<li>
+							<a href="{U_WATCH_FORUM_LINK}" title="{S_WATCH_FORUM_TITLE}"><span>{S_WATCH_FORUM_TITLE}</span></a>
+						</li>
+					<!-- ENDIF -->					
 					<!-- EVENT navbar_header_quick_links_after -->
 				</ul>
 			</div>
