--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -1,174 +1,164 @@
-		<!-- EVENT overall_footer_content_after -->
-	</div>
-
-	<!-- EVENT overall_footer_page_body_after -->
-
-	<footer id="page-footer" class="page-footer" role="contentinfo">
-		<div class="footer-inner">
-			<div class="wrapper">
-				<div class="row row-20">
-					<div class="column">
-						<p>Freed from Bhelest's nightmares, the realm of Khy'eras unveiled vast reaches perfect for exploration. Create a character and unlock the land's secrets. Original high fantasy RPG with no word count.</p>
-						<p>
-							<a class="button-link" href="//rpgrating.com" target="_blank">
-								<img src="//rpgrating.com/ratings/333.png" alt="Rated 333 from RPGRating.com" title="Rated 333 from RPGRating.com" />
-							</a>
-						</p>
-						<p class="copyright">
-							&copy; 2017 Khy'eras RPG<span class="bullet">&bull;</span>Content and layout design by Adria<br />
-							<!-- EVENT overall_footer_copyright_prepend -->
-							{CREDIT_LINE}
-							<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
-							<!-- EVENT overall_footer_copyright_append -->
-							<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
-						</p>					
-					</div>
-					<div class="column">
-						<h4>Random Content Goes Here</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
-					</div>
-					<div class="column">
-						<h4>Listed At</h4>
-						<div class="button-wrapper">
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-						</div>	
-						<h4>Affiliates</h4>
-						<div class="button-wrapper">
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>
-							<a class="button-link" href="//google.com" target="_blank">
-								<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-							</a>	
-						</div>				
-					</div>
-				</div>
-				<div class="row row-20">
-					<div class="column">
-						<p class="bottom-line">
-							<!-- EVENT overall_footer_timezone_before -->
-							<i class="icon fa-clock-o fa-fw" aria-hidden="true"></i>{S_TIMEZONE}
-							<!-- EVENT overall_footer_timezone_after -->
-							<span class="bullet">&bull;</span>	
-							<!-- IF not S_IS_BOT -->
-								<a href="{U_DELETE_COOKIES}">
-									<i class="icon fa-trash fa-fw" aria-hidden="true"></i>{L_DELETE_COOKIES}
-								</a>
-							<!-- ENDIF -->										
-						</p>
-					</div>
-				</div>
-				<!-- INCLUDE navbar_footer.html -->
+				<!-- EVENT overall_footer_content_after -->
 			</div>
+		</section>
+		<!-- EVENT overall_footer_page_body_after -->
+		<footer id="page-footer" class="page-footer" role="contentinfo">
+			<div class="footer-inner">
+				<div class="wrapper">
+					<div class="row row-20">
+						<div class="column">
+							<p>Freed from Bhelest's nightmares, the realm of Khy'eras unveiled vast reaches perfect for exploration. Create a character and unlock the land's secrets. Original high fantasy RPG with no word count.</p>
+							<p>
+								<a class="button-link" href="//rpgrating.com" target="_blank">
+									<img src="//rpgrating.com/ratings/333.png" alt="Rated 333 from RPGRating.com" title="Rated 333 from RPGRating.com" />
+								</a>
+							</p>
+							<p class="copyright">
+								&copy; 2017 Khy'eras RPG<span class="bullet">&bull;</span>Content and layout design by Adria/Memoria<br />
+								<!-- EVENT overall_footer_copyright_prepend -->
+								{CREDIT_LINE}
+								<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
+								<!-- EVENT overall_footer_copyright_append -->
+								<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
+							</p>					
+						</div>
+						<div class="column">
+							<h4>Random Content Goes Here</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
+						</div>
+						<div class="column">
+							<h4>Listed At</h4>
+							<div class="button-wrapper">
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+							</div>	
+							<h4>Affiliates</h4>
+							<div class="button-wrapper">
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>
+								<a class="button-link" href="//google.com" target="_blank">
+									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
+								</a>	
+							</div>				
+						</div>
+					</div>
+					<div class="row row-20">
+						<div class="column">
+							<p class="bottom-line">
+								<!-- EVENT overall_footer_timezone_before -->
+								<i class="icon fa-clock-o fa-fw" aria-hidden="true"></i>{S_TIMEZONE}
+								<!-- EVENT overall_footer_timezone_after -->
+								<span class="bullet">&bull;</span>	
+								<!-- IF not S_IS_BOT -->
+									<a href="{U_DELETE_COOKIES}">
+										<i class="icon fa-trash fa-fw" aria-hidden="true"></i>{L_DELETE_COOKIES}
+									</a>
+								<!-- ENDIF -->										
+							</p>
+						</div>
+					</div>
+					<!-- INCLUDE navbar_footer.html -->
+				</div>
+			</div>
+		</footer>
+		<div id="darkenwrapper" class="darkenwrapper" data-ajax-error-title="{L_AJAX_ERROR_TITLE}" data-ajax-error-text="{L_AJAX_ERROR_TEXT}" data-ajax-error-text-abort="{L_AJAX_ERROR_TEXT_ABORT}" data-ajax-error-text-timeout="{L_AJAX_ERROR_TEXT_TIMEOUT}" data-ajax-error-text-parsererror="{L_AJAX_ERROR_TEXT_PARSERERROR}">
+			<div id="darken" class="darken">&nbsp;</div>
 		</div>
-	</footer>
-
-	<div id="darkenwrapper" class="darkenwrapper" data-ajax-error-title="{L_AJAX_ERROR_TITLE}" data-ajax-error-text="{L_AJAX_ERROR_TEXT}" data-ajax-error-text-abort="{L_AJAX_ERROR_TEXT_ABORT}" data-ajax-error-text-timeout="{L_AJAX_ERROR_TEXT_TIMEOUT}" data-ajax-error-text-parsererror="{L_AJAX_ERROR_TEXT_PARSERERROR}">
-		<div id="darken" class="darken">&nbsp;</div>
+		<div id="phpbb_alert" class="phpbb_alert" data-l-err="{L_ERROR}" data-l-timeout-processing-req="{L_TIMEOUT_PROCESSING_REQ}">
+			<a href="#" class="alert_close">
+				<i class="icon fa-times-circle fa-fw" aria-hidden="true"></i>
+			</a>
+			<h3 class="alert_title">&nbsp;</h3><p class="alert_text"></p>
+		</div>
+		<div id="phpbb_confirm" class="phpbb_alert">
+			<a href="#" class="alert_close">
+				<i class="icon fa-times-circle fa-fw" aria-hidden="true"></i>
+			</a>
+			<div class="alert_text"></div>
+		</div>
 	</div>
-
-	<div id="phpbb_alert" class="phpbb_alert" data-l-err="{L_ERROR}" data-l-timeout-processing-req="{L_TIMEOUT_PROCESSING_REQ}">
-		<a href="#" class="alert_close">
-			<i class="icon fa-times-circle fa-fw" aria-hidden="true"></i>
-		</a>
-		<h3 class="alert_title">&nbsp;</h3><p class="alert_text"></p>
+	<div class="bottom-hidden">
+		<a id="bottom" class="anchor" accesskey="z"></a>
+		<!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF -->
 	</div>
-	<div id="phpbb_confirm" class="phpbb_alert">
-		<a href="#" class="alert_close">
-			<i class="icon fa-times-circle fa-fw" aria-hidden="true"></i>
-		</a>
-		<div class="alert_text"></div>
-	</div>
-
-</div>
-
-<div>
-	<a id="bottom" class="anchor" accesskey="z"></a>
-	<!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF -->
-</div>
-
-<script type="text/javascript" src="{T_JQUERY_LINK}"></script>
-<!-- IF S_ALLOW_CDN -->
-<script type="text/javascript">window.jQuery || document.write('\x3Cscript src="{T_ASSETS_PATH}/javascript/jquery.min.js?assets_version={T_ASSETS_VERSION}">\x3C/script>');</script>
-<!-- ENDIF -->
-<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js?assets_version={T_ASSETS_VERSION}"></script>
-<!-- INCLUDEJS forum_fn.js -->
-<!-- INCLUDEJS ajax.js -->
-<script type="text/javascript" src="{T_TEMPLATE_PATH}/functions.js?assets_version={T_ASSETS_VERSION}"></script>
-<!-- IF S_ALLOW_CDN -->
-	<script type="text/javascript">
-		(function($){
-			var $fa_cdn = $('head').find('link[rel="stylesheet"]').first(),
-				$span = $('<span class="fa" style="display:none"></span>').appendTo('body');
-			if ($span.css('fontFamily') !== 'FontAwesome' ) {
-				$fa_cdn.after('<link href="{T_ASSETS_PATH}/css/font-awesome.min.css" rel="stylesheet">');
-				$fa_cdn.remove();
-			}
-			$span.remove();
-		})(jQuery);
-	</script>
-<!-- ENDIF -->
-<!-- IF S_COOKIE_NOTICE -->
-	<script src="{T_ASSETS_PATH}/cookieconsent/cookieconsent.min.js?assets_version={T_ASSETS_VERSION}"></script>
-	<script>
-		window.addEventListener("load", function(){
-			window.cookieconsent.initialise({
-				"palette": {
-					"popup": {
-						"background": "#0F538A"
-					},
-					"button": {
-						"background": "#E5E5E5"
-					}
-				},
-				"theme": "classic",
-				"content": {
-					"message": "{LA_COOKIE_CONSENT_MSG}",
-					"dismiss": "{LA_COOKIE_CONSENT_OK}",
-					"link": "{LA_COOKIE_CONSENT_INFO}"
+	<script type="text/javascript" src="{T_JQUERY_LINK}"></script>
+	<!-- IF S_ALLOW_CDN -->
+	<script type="text/javascript">window.jQuery || document.write('\x3Cscript src="{T_ASSETS_PATH}/javascript/jquery.min.js?assets_version={T_ASSETS_VERSION}">\x3C/script>');</script>
+	<!-- ENDIF -->
+	<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js?assets_version={T_ASSETS_VERSION}"></script>
+	<!-- INCLUDEJS forum_fn.js -->
+	<!-- INCLUDEJS ajax.js -->
+	<script type="text/javascript" src="{T_TEMPLATE_PATH}/functions.js?assets_version={T_ASSETS_VERSION}"></script>
+	<!-- IF S_ALLOW_CDN -->
+		<script type="text/javascript">
+			(function($){
+				var $fa_cdn = $('head').find('link[rel="stylesheet"]').first(),
+					$span = $('<span class="fa" style="display:none"></span>').appendTo('body');
+				if ($span.css('fontFamily') !== 'FontAwesome' ) {
+					$fa_cdn.after('<link href="{T_ASSETS_PATH}/css/font-awesome.min.css" rel="stylesheet">');
+					$fa_cdn.remove();
 				}
-			})});
-	</script>
-<!-- ENDIF -->
-
-<!-- EVENT overall_footer_after -->
-
-<!-- IF S_PLUPLOAD --><!-- INCLUDE plupload.html --><!-- ENDIF -->
-{$SCRIPTS}
-
-<!-- EVENT overall_footer_body_after -->
-
+				$span.remove();
+			})(jQuery);
+		</script>
+	<!-- ENDIF -->
+	<!-- IF S_COOKIE_NOTICE -->
+		<script src="{T_ASSETS_PATH}/cookieconsent/cookieconsent.min.js?assets_version={T_ASSETS_VERSION}"></script>
+		<script>
+			window.addEventListener("load", function(){
+				window.cookieconsent.initialise({
+					"palette": {
+						"popup": {
+							"background": "#0F538A"
+						},
+						"button": {
+							"background": "#E5E5E5"
+						}
+					},
+					"theme": "classic",
+					"content": {
+						"message": "{LA_COOKIE_CONSENT_MSG}",
+						"dismiss": "{LA_COOKIE_CONSENT_OK}",
+						"link": "{LA_COOKIE_CONSENT_INFO}"
+					}
+				})});
+		</script>
+	<!-- ENDIF -->
+	<!-- EVENT overall_footer_after -->
+	<!-- IF S_PLUPLOAD --><!-- INCLUDE plupload.html --><!-- ENDIF -->
+	{$SCRIPTS}
+	<!-- EVENT overall_footer_body_after -->
 </body>
 </html>
