--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -85,6 +85,10 @@ abbr[title] {
 	top: 2px;
 }
 
+a.anchor {
+	display: block;
+}
+
 /* Utilities (from prosilver utilities.css)
    Notes: did not add things like pull-left/right, hide, show, invisible, text-hide, affix
 ========================================================================== */
