--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {META}
 <title><!-- IF UNREAD_NOTIFICATIONS_COUNT -->({UNREAD_NOTIFICATIONS_COUNT}) <!-- ENDIF --><!-- IF not S_VIEWTOPIC and not S_VIEWFORUM -->{SITENAME} - <!-- ENDIF --><!-- IF S_IN_MCP -->{L_MCP} - <!-- ELSEIF S_IN_UCP -->{L_UCP} - <!-- ENDIF -->{PAGE_TITLE}<!-- IF S_VIEWTOPIC or S_VIEWFORUM --> - {SITENAME}<!-- ENDIF --></title>
-
 <!-- IF S_ENABLE_FEEDS -->
 	<!-- IF S_ENABLE_FEEDS_OVERALL --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {SITENAME}" href="{{ path('phpbb_feed_index') }}"><!-- ENDIF -->
 	<!-- IF S_ENABLE_FEEDS_NEWS --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {L_FEED_NEWS}" href="{{ path('phpbb_feed_news') }}"><!-- ENDIF -->
@@ -17,18 +16,15 @@
 	<!-- IF S_ENABLE_FEEDS_TOPIC and S_TOPIC_ID --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {L_TOPIC} - {TOPIC_TITLE}" href="{{ path('phpbb_feed_topic', { topic_id : S_TOPIC_ID } ) }}"><!-- ENDIF -->
 	<!-- EVENT overall_header_feeds -->
 <!-- ENDIF -->
-
 <!-- IF U_CANONICAL -->
 	<link rel="canonical" href="{U_CANONICAL}">
 <!-- ENDIF -->
-
 <!--
 	phpBB style name: Khy'eras (version 1.0)
 	Based on style:   prosilver (this is the default phpBB3 style)
 	Original author:  Tom Beddard ( http://www.subBlue.com/ )
 	Modified by: Adria Murphy
 -->
-
 <!-- IF S_ALLOW_CDN -->
 <script>
 	WebFontConfig = {
@@ -59,186 +55,174 @@
 <!-- EVENT overall_header_head_append -->
 {$STYLESHEETS}
 <!-- EVENT overall_header_stylesheets_after -->
-
 </head>
 <body id="phpbb" class="nojs notouch section-{SCRIPT_NAME} {S_CONTENT_DIRECTION} {BODY_CLASS}">
-
-<!--[if lte IE 9]>
-	<p class="browserupgrade">
-		<?php _e( 'You are using an <strong>outdated</strong> browser. Please <a href="//browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.', 'musescircle' ); ?>
-	</p>
-<![endif]-->
-
-<!-- EVENT overall_header_body_before -->
-
-<div id="wrap" class="wrap">
-	<a id="top" class="top-anchor" accesskey="t"></a>
-	<header id="page-header">
-		<!-- EVENT overall_header_navbar_before -->
-		<!-- INCLUDE navbar_header.html -->	
-		<div class="headerbar" role="banner">
-			<!-- EVENT overall_header_headerbar_before -->
-			<div id="site-description" class="site-description">
-				<h1>
-					<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
-				</h1>
-				<h3>{SITE_DESCRIPTION}</h3>
-				<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
+	<!--[if lte IE 9]>
+		<p class="browserupgrade">
+			You are using an <strong>outdated</strong> browser. Please <a href="//browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.
+		</p>
+	<![endif]-->
+	<!-- EVENT overall_header_body_before -->
+	<div id="wrap" class="wrap">
+		<a id="top" class="top-anchor" accesskey="t"></a>
+		<header id="page-header">
+			<!-- EVENT overall_header_navbar_before -->
+			<!-- INCLUDE navbar_header.html -->	
+			<div class="headerbar" role="banner">
+				<!-- EVENT overall_header_headerbar_before -->
+				<div id="site-description" class="site-description">
+					<h1>
+						<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
+					</h1>
+					<h3>{SITE_DESCRIPTION}</h3>
+					<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
+				</div>
+				<!-- EVENT overall_header_searchbox_before -->
+				<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
+				<div id="search-box" class="search-box search-header" role="search">
+					<form action="{U_SEARCH}" method="get" id="search">
+					<fieldset>
+						<input name="keywords" id="keywords" type="search" maxlength="128" title="{L_SEARCH_KEYWORDS}" class="inputbox search tiny" size="20" value="{SEARCH_WORDS}" placeholder="{L_SEARCH_MINI}" />
+						<button class="button button-search" type="submit" title="{L_SEARCH}">
+							<i class="icon fa-search fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH}</span>
+						</button>
+						<a href="{U_SEARCH}" class="button button-search-end" title="{L_SEARCH_ADV}">
+							<i class="icon fa-cog fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH_ADV}</span>
+						</a>
+						{S_SEARCH_HIDDEN_FIELDS}
+					</fieldset>
+					</form>
+				</div>
+				<!-- ENDIF -->
+				<!-- EVENT overall_header_searchbox_after -->
+				<div class="header-overlay"></div>
 			</div>
-			<!-- EVENT overall_header_searchbox_before -->
-			<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
-			<div id="search-box" class="search-box search-header" role="search">
-				<form action="{U_SEARCH}" method="get" id="search">
-				<fieldset>
-					<input name="keywords" id="keywords" type="search" maxlength="128" title="{L_SEARCH_KEYWORDS}" class="inputbox search tiny" size="20" value="{SEARCH_WORDS}" placeholder="{L_SEARCH_MINI}" />
-					<button class="button button-search" type="submit" title="{L_SEARCH}">
-						<i class="icon fa-search fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH}</span>
-					</button>
-					<a href="{U_SEARCH}" class="button button-search-end" title="{L_SEARCH_ADV}">
-						<i class="icon fa-cog fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH_ADV}</span>
-					</a>
-					{S_SEARCH_HIDDEN_FIELDS}
-				</fieldset>
-				</form>
+			<!-- EVENT overall_header_headerbar_after -->
+		</header>
+		<section id="page-welcome" class="page-welcome">
+			<div class="wrapper">
+				<ul>
+					<!-- IF U_ACP -->
+						<li>
+							<a href="{U_ACP}" title="{L_ACP}" role="menuitem">
+								<i class="icon fa-cogs fa-fw" aria-hidden="true"></i><span>{L_ACP_SHORT}</span>
+							</a>
+						</li>
+					<!-- ENDIF -->
+					<!-- IF U_MCP -->
+						<li>
+							<a href="{U_MCP}" title="{L_MCP}" role="menuitem">
+								<i class="icon fa-gavel fa-fw" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
+							</a>
+						</li>
+					<!-- ENDIF -->
+
+					<!-- IF S_REGISTERED_USER -->
+						<!-- EVENT navbar_header_user_profile_prepend -->
+						<li id="username_logged_in" class="rightside <!-- IF CURRENT_USER_AVATAR --> no-bulletin<!-- ENDIF -->">
+							<!-- EVENT navbar_header_username_prepend -->
+							<div class="header-profile dropdown-container">
+								<a href="{U_PROFILE}" class="header-avatar dropdown-trigger"><!-- IF CURRENT_USER_AVATAR -->{CURRENT_USER_AVATAR} <!-- ENDIF --> {CURRENT_USERNAME_SIMPLE}</a>
+								<div class="dropdown">
+									<div class="pointer"><div class="pointer-inner"></div></div>
+									<ul class="dropdown-contents" role="menu">
+										<!-- IF U_RESTORE_PERMISSIONS -->
+											<li>
+												<a href="{U_RESTORE_PERMISSIONS}">
+													<i class="icon fa-refresh fa-fw" aria-hidden="true"></i><span>{L_RESTORE_PERMISSIONS}</span>
+												</a>
+											</li>
+										<!-- ENDIF -->
+
+									<!-- EVENT navbar_header_profile_list_before -->
+
+										<li>
+											<a href="{U_PROFILE}" title="{L_PROFILE}" role="menuitem">
+												<i class="icon fa-sliders fa-fw" aria-hidden="true"></i><span>{L_PROFILE}</span>
+											</a>
+										</li>
+										<li>
+											<a href="{U_USER_PROFILE}" title="{L_READ_PROFILE}" role="menuitem">
+												<i class="icon fa-user fa-fw" aria-hidden="true"></i><span>{L_READ_PROFILE}</span>
+											</a>
+										</li>
+
+										<!-- EVENT navbar_header_profile_list_after -->
+
+										<li>
+											<a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x" role="menuitem">
+												<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<!-- EVENT navbar_header_username_append -->
+						</li>
+						<!-- IF S_DISPLAY_PM -->
+							<li class="rightside">
+								<a href="{U_PRIVATEMSGS}" role="menuitem">
+									<i class="icon fa-inbox fa-fw" aria-hidden="true"></i><span>{L_PRIVATE_MESSAGES} </span><strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
+								</a>
+							</li>
+						<!-- ENDIF -->
+						<!-- IF S_NOTIFICATIONS_DISPLAY -->
+							<li class="dropdown-container dropdown-{S_CONTENT_FLOW_END} rightside">
+								<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="dropdown-trigger">
+									<i class="icon fa-bell fa-fw" aria-hidden="true"></i><span>{L_NOTIFICATIONS} </span><strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
+								</a>
+								<!-- INCLUDE notification_dropdown.html -->
+							</li>
+						<!-- ENDIF -->
+						<!-- EVENT navbar_header_user_profile_append -->
+					<!-- ELSE -->
+						<li class="rightside">
+							<a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x" role="menuitem">
+								<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
+							</a>
+						</li>
+						<!-- IF S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) -->
+							<li class="rightside">
+								<a href="{U_REGISTER}" role="menuitem">
+									<i class="icon fa-pencil-square-o  fa-fw" aria-hidden="true"></i><span>{L_REGISTER}</span>
+								</a>
+							</li>
+						<!-- ENDIF -->
+						<!-- EVENT navbar_header_logged_out_content -->
+					<!-- ENDIF -->
+				</ul>
+
+				<ul id="nav-breadcrumbs" class="nav-breadcrumbs linklist navlinks" role="menubar">
+					<!-- DEFINE $MICRODATA = ' itemtype="http://data-vocabulary.org/Breadcrumb" itemscope=""' -->
+					<!-- EVENT overall_header_breadcrumbs_before -->
+					<li class="breadcrumbs">
+						<!-- IF U_SITE_HOME -->
+							<span class="crumb" {$MICRODATA}><a href="{U_SITE_HOME}" itemprop="url" data-navbar-reference="home"><i class="icon fa-home fa-fw" aria-hidden="true"></i><span itemprop="title">{L_SITE_HOME}</span></a></span>
+						<!-- ENDIF -->
+						<!-- EVENT overall_header_breadcrumb_prepend -->
+							<span class="crumb" {$MICRODATA}><a href="{U_INDEX}" itemprop="url" accesskey="h" data-navbar-reference="index"><!-- IF not U_SITE_HOME --><i class="icon fa-home fa-fw"></i><!-- ENDIF --><span itemprop="title">{L_INDEX}</span></a></span>
+
+						<!-- BEGIN navlinks -->
+							<!-- EVENT overall_header_navlink_prepend -->
+							<span class="crumb" {$MICRODATA}<!-- IF navlinks.MICRODATA --> {navlinks.MICRODATA}<!-- ENDIF -->><a href="{navlinks.U_VIEW_FORUM}" itemprop="url"><span itemprop="title">{navlinks.FORUM_NAME}</span></a></span>
+							<!-- EVENT overall_header_navlink_append -->
+						<!-- END navlinks -->
+						<!-- EVENT overall_header_breadcrumb_append -->
+					</li>
+					<!-- EVENT overall_header_breadcrumbs_after -->
+
+				</ul>
 			</div>
-			<!-- ENDIF -->
-			<!-- EVENT overall_header_searchbox_after -->
-			<div class="header-overlay"></div>
-
-		</div>
-		<!-- EVENT overall_header_headerbar_after -->
-	</header>
-
-<!-- MOVED FROM NAVBAR_HEADER -->
-<div>
-	<ul>
-		<!-- IF U_ACP -->
-			<li>
-				<a href="{U_ACP}" title="{L_ACP}" role="menuitem">
-					<i class="icon fa-cogs fa-fw" aria-hidden="true"></i><span>{L_ACP_SHORT}</span>
-				</a>
-			</li>
-		<!-- ENDIF -->
-		<!-- IF U_MCP -->
-			<li>
-				<a href="{U_MCP}" title="{L_MCP}" role="menuitem">
-					<i class="icon fa-gavel fa-fw" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
-				</a>
-			</li>
-		<!-- ENDIF -->
-
-		<!-- IF S_REGISTERED_USER -->
-			<!-- EVENT navbar_header_user_profile_prepend -->
-			<li id="username_logged_in" class="rightside <!-- IF CURRENT_USER_AVATAR --> no-bulletin<!-- ENDIF -->">
-				<!-- EVENT navbar_header_username_prepend -->
-				<div class="header-profile dropdown-container">
-					<a href="{U_PROFILE}" class="header-avatar dropdown-trigger"><!-- IF CURRENT_USER_AVATAR -->{CURRENT_USER_AVATAR} <!-- ENDIF --> {CURRENT_USERNAME_SIMPLE}</a>
-					<div class="dropdown">
-						<div class="pointer"><div class="pointer-inner"></div></div>
-						<ul class="dropdown-contents" role="menu">
-							<!-- IF U_RESTORE_PERMISSIONS -->
-								<li>
-									<a href="{U_RESTORE_PERMISSIONS}">
-										<i class="icon fa-refresh fa-fw" aria-hidden="true"></i><span>{L_RESTORE_PERMISSIONS}</span>
-									</a>
-								</li>
-							<!-- ENDIF -->
-
-						<!-- EVENT navbar_header_profile_list_before -->
-
-							<li>
-								<a href="{U_PROFILE}" title="{L_PROFILE}" role="menuitem">
-									<i class="icon fa-sliders fa-fw" aria-hidden="true"></i><span>{L_PROFILE}</span>
-								</a>
-							</li>
-							<li>
-								<a href="{U_USER_PROFILE}" title="{L_READ_PROFILE}" role="menuitem">
-									<i class="icon fa-user fa-fw" aria-hidden="true"></i><span>{L_READ_PROFILE}</span>
-								</a>
-							</li>
-
-							<!-- EVENT navbar_header_profile_list_after -->
-
-							<li>
-								<a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x" role="menuitem">
-									<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
-								</a>
-							</li>
-						</ul>
+		</section>
+		<!-- EVENT overall_header_page_body_before -->		
+		<section id="page-body" class="page-body" role="main">
+			<div class="wrapper">
+				<a id="start_here" class="anchor"></a>
+				<!-- IF S_BOARD_DISABLED and S_USER_LOGGED_IN and (U_MCP or U_ACP) -->
+				<div id="information" class="rules">
+					<div class="inner">
+						<strong>{L_INFORMATION}{L_COLON}</strong> {L_BOARD_DISABLED}
 					</div>
 				</div>
-				<!-- EVENT navbar_header_username_append -->
-			</li>
-			<!-- IF S_DISPLAY_PM -->
-				<li class="rightside">
-					<a href="{U_PRIVATEMSGS}" role="menuitem">
-						<i class="icon fa-inbox fa-fw" aria-hidden="true"></i><span>{L_PRIVATE_MESSAGES} </span><strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
-					</a>
-				</li>
-			<!-- ENDIF -->
-			<!-- IF S_NOTIFICATIONS_DISPLAY -->
-				<li class="dropdown-container dropdown-{S_CONTENT_FLOW_END} rightside">
-					<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="dropdown-trigger">
-						<i class="icon fa-bell fa-fw" aria-hidden="true"></i><span>{L_NOTIFICATIONS} </span><strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
-					</a>
-					<!-- INCLUDE notification_dropdown.html -->
-				</li>
-			<!-- ENDIF -->
-			<!-- EVENT navbar_header_user_profile_append -->
-		<!-- ELSE -->
-			<li class="rightside">
-				<a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x" role="menuitem">
-					<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
-				</a>
-			</li>
-			<!-- IF S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) -->
-				<li class="rightside">
-					<a href="{U_REGISTER}" role="menuitem">
-						<i class="icon fa-pencil-square-o  fa-fw" aria-hidden="true"></i><span>{L_REGISTER}</span>
-					</a>
-				</li>
-			<!-- ENDIF -->
-			<!-- EVENT navbar_header_logged_out_content -->
-		<!-- ENDIF -->
-	</ul>
-
-	<ul id="nav-breadcrumbs" class="nav-breadcrumbs linklist navlinks" role="menubar">
-		<!-- DEFINE $MICRODATA = ' itemtype="http://data-vocabulary.org/Breadcrumb" itemscope=""' -->
-		<!-- EVENT overall_header_breadcrumbs_before -->
-		<li class="breadcrumbs">
-			<!-- IF U_SITE_HOME -->
-				<span class="crumb" {$MICRODATA}><a href="{U_SITE_HOME}" itemprop="url" data-navbar-reference="home"><i class="icon fa-home fa-fw" aria-hidden="true"></i><span itemprop="title">{L_SITE_HOME}</span></a></span>
-			<!-- ENDIF -->
-			<!-- EVENT overall_header_breadcrumb_prepend -->
-				<span class="crumb" {$MICRODATA}><a href="{U_INDEX}" itemprop="url" accesskey="h" data-navbar-reference="index"><!-- IF not U_SITE_HOME --><i class="icon fa-home fa-fw"></i><!-- ENDIF --><span itemprop="title">{L_INDEX}</span></a></span>
-
-			<!-- BEGIN navlinks -->
-				<!-- EVENT overall_header_navlink_prepend -->
-				<span class="crumb" {$MICRODATA}<!-- IF navlinks.MICRODATA --> {navlinks.MICRODATA}<!-- ENDIF -->><a href="{navlinks.U_VIEW_FORUM}" itemprop="url"><span itemprop="title">{navlinks.FORUM_NAME}</span></a></span>
-				<!-- EVENT overall_header_navlink_append -->
-			<!-- END navlinks -->
-			<!-- EVENT overall_header_breadcrumb_append -->
-		</li>
-		<!-- EVENT overall_header_breadcrumbs_after -->
-
-	</ul>
-</div>
-<!-- MOVED FROM NAVBAR_HEADER -->
-
-
-
-
-
-	<!-- EVENT overall_header_page_body_before -->
-
-	<a id="start_here" class="anchor"></a>
-	<div id="page-body" class="page-body" role="main">
-		<!-- IF S_BOARD_DISABLED and S_USER_LOGGED_IN and (U_MCP or U_ACP) -->
-		<div id="information" class="rules">
-			<div class="inner">
-				<strong>{L_INFORMATION}{L_COLON}</strong> {L_BOARD_DISABLED}
-			</div>
-		</div>
-		<!-- ENDIF -->
-
-		<!-- EVENT overall_header_content_before -->
+				<!-- ENDIF -->
+				<!-- EVENT overall_header_content_before -->
