--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {META}
 <title><!-- IF UNREAD_NOTIFICATIONS_COUNT -->({UNREAD_NOTIFICATIONS_COUNT}) <!-- ENDIF --><!-- IF not S_VIEWTOPIC and not S_VIEWFORUM -->{SITENAME} - <!-- ENDIF --><!-- IF S_IN_MCP -->{L_MCP} - <!-- ELSEIF S_IN_UCP -->{L_UCP} - <!-- ENDIF -->{PAGE_TITLE}<!-- IF S_VIEWTOPIC or S_VIEWFORUM --> - {SITENAME}<!-- ENDIF --></title>
+
 <!-- IF S_ENABLE_FEEDS -->
 	<!-- IF S_ENABLE_FEEDS_OVERALL --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {SITENAME}" href="{{ path('phpbb_feed_index') }}"><!-- ENDIF -->
 	<!-- IF S_ENABLE_FEEDS_NEWS --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {L_FEED_NEWS}" href="{{ path('phpbb_feed_news') }}"><!-- ENDIF -->
@@ -16,15 +17,18 @@
 	<!-- IF S_ENABLE_FEEDS_TOPIC and S_TOPIC_ID --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {L_TOPIC} - {TOPIC_TITLE}" href="{{ path('phpbb_feed_topic', { topic_id : S_TOPIC_ID } ) }}"><!-- ENDIF -->
 	<!-- EVENT overall_header_feeds -->
 <!-- ENDIF -->
+
 <!-- IF U_CANONICAL -->
 	<link rel="canonical" href="{U_CANONICAL}">
 <!-- ENDIF -->
+
 <!--
 	phpBB style name: Khy'eras (version 1.0)
 	Based on style:   prosilver (this is the default phpBB3 style)
 	Original author:  Tom Beddard ( http://www.subBlue.com/ )
 	Modified by: Adria Murphy
 -->
+
 <!-- IF S_ALLOW_CDN -->
 <script>
 	WebFontConfig = {
@@ -41,30 +45,43 @@
 	})(document);
 </script>
 <!-- ENDIF -->
+
 <link href="{T_FONT_AWESOME_LINK}" rel="stylesheet">
 <link href="{T_STYLESHEET_LINK}" rel="stylesheet">
+
 <!-- IF S_CONTENT_DIRECTION eq 'rtl' -->
 	<link href="{T_THEME_PATH}/bidi.css?assets_version={T_ASSETS_VERSION}" rel="stylesheet">
 <!-- ENDIF -->
+
 <!-- IF S_PLUPLOAD -->
 	<link href="{T_THEME_PATH}/plupload.css?assets_version={T_ASSETS_VERSION}" rel="stylesheet">
 <!-- ENDIF -->
+
 <!-- IF S_COOKIE_NOTICE -->
 	<link href="{T_ASSETS_PATH}/cookieconsent/cookieconsent.min.css?assets_version={T_ASSETS_VERSION}" rel="stylesheet">
 <!-- ENDIF -->
+
 <!-- EVENT overall_header_head_append -->
+
 {$STYLESHEETS}
+
 <!-- EVENT overall_header_stylesheets_after -->
+
 </head>
 <body id="phpbb" class="nojs notouch section-{SCRIPT_NAME} {S_CONTENT_DIRECTION} {BODY_CLASS}">
+
 	<!--[if lte IE 9]>
 		<p class="browserupgrade">
 			You are using an <strong>outdated</strong> browser. Please <a href="//browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.
 		</p>
 	<![endif]-->
+
 	<!-- EVENT overall_header_body_before -->
+
 	<div id="wrap" class="wrap">
+
 		<a id="top" class="top-anchor" accesskey="t"></a>
+
 		<header id="page-header">
 			<!-- EVENT overall_header_navbar_before -->
 			<!-- INCLUDE navbar_header.html -->	
@@ -79,53 +96,109 @@
 				</div>
 				<!-- EVENT overall_header_searchbox_before -->
 				<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
-				<div id="search-box" class="search-box search-header" role="search">
-					<form action="{U_SEARCH}" method="get" id="search">
-					<fieldset>
-						<input name="keywords" id="keywords" type="search" maxlength="128" title="{L_SEARCH_KEYWORDS}" class="inputbox search tiny" size="20" value="{SEARCH_WORDS}" placeholder="{L_SEARCH_MINI}" />
-						<button class="button button-search" type="submit" title="{L_SEARCH}">
-							<i class="icon fa-search fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH}</span>
-						</button>
-						<a href="{U_SEARCH}" class="button button-search-end" title="{L_SEARCH_ADV}">
-							<i class="icon fa-cog fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH_ADV}</span>
-						</a>
-						{S_SEARCH_HIDDEN_FIELDS}
-					</fieldset>
-					</form>
-				</div>
+					<div id="search-box" class="search-box search-header" role="search">
+						<form action="{U_SEARCH}" method="get" id="search">
+						<fieldset>
+							<input name="keywords" id="keywords" type="search" maxlength="128" title="{L_SEARCH_KEYWORDS}" class="inputbox search tiny" size="20" value="{SEARCH_WORDS}" placeholder="{L_SEARCH_MINI}" />
+							<button class="button button-search" type="submit" title="{L_SEARCH}">
+								<i class="icon fa-search fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH}</span>
+							</button>
+							<a href="{U_SEARCH}" class="button button-search-end" title="{L_SEARCH_ADV}">
+								<i class="icon fa-cog fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH_ADV}</span>
+							</a>
+							{S_SEARCH_HIDDEN_FIELDS}
+						</fieldset>
+						</form>
+					</div>
 				<!-- ENDIF -->
 				<!-- EVENT overall_header_searchbox_after -->
 				<div class="header-overlay"></div>
 			</div>
 			<!-- EVENT overall_header_headerbar_after -->
 		</header>
+
 		<section id="page-welcome" class="page-welcome">
 			<div class="wrapper">
+				<div class="welcome-inner">
+					<div class="row row-10">
+						<div class="introduction column">
+							<p>All at once, the Eidolon's restoration of Khy'eras was obliterated when Bhelest unlocked ancient, concealed magic. With newfound talents, the mage exiled the Eidolons and amassed legions of the undead. Two hundred years of terror transpired until Cecilia of Fellsgard gathered followers to bring forth Bhelest's downfall. Free from nightmares, the expansive realm flourished and explorers journeyed from cities. People referred to Khy'eras as "The Neverend", unsure of its boundaries. Some claimed that those who departed found only death, but others discovered something else entirely - hope and adventures.</p>
+							<p><a href="//google.com">Read more...</a></p>
+						</div>
+						<div class="column">
+							<h5>Something</h5>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
+						</div>
+						<div class="user-information column">
+							<!-- DEFINE $DISPLAY_TIME -->
+								<p><!-- IF S_USER_LOGGED_IN -->{LAST_VISIT_DATE}<!-- ELSE -->{CURRENT_TIME}<!-- ENDIF -->.<!-- IF S_USER_LOGGED_IN --> {CURRENT_TIME}.<!-- ENDIF --></p>
+							<!-- ENDDEFINE -->
+							<!-- DEFINE $DISPLAY_AVATAR -->
+								<div class="user-avatar">
+									<div class="image-wrap">
+										<!-- IF CURRENT_USER_AVATAR -->
+											{CURRENT_USER_AVATAR}
+										<!-- ELSE -->
+											<img src="//via.placeholder.com/200x200" alt="" />
+										<!-- ENDIF -->
+									</div>
+								</div>							
+							<!-- ENDDEFINE -->
+							<!-- IF S_REGISTERED_USER -->
+								<!-- EVENT navbar_header_user_profile_prepend -->
+								<!-- EVENT navbar_header_username_prepend -->
+								<h5>Welcome, <a href="{U_PROFILE}">{CURRENT_USERNAME_SIMPLE}</a>.</h5>
+								<!-- EVENT navbar_header_username_append -->
+								{$DISPLAY_AVATAR}
+								{$DISPLAY_TIME}
+								<ul>
+									<li>
+										<!-- IF S_DISPLAY_PM -->
+											<a href="{U_PRIVATEMSGS}">
+												<i class="icon fa-inbox fa-fw" aria-hidden="true"></i>{L_PRIVATE_MESSAGES}<strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
+											</a>
+										<!-- ENDIF -->
+										<span class="bullet">&bull;</span> 
+										<!-- IF S_NOTIFICATIONS_DISPLAY -->
+											<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="dropdown-trigger">
+												<i class="icon fa-bell fa-fw" aria-hidden="true"></i>{L_NOTIFICATIONS}<strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
+											</a>
+											<!-- INCLUDE notification_dropdown.html -->
+										<!-- ENDIF -->
+									</li>
+									<li class="cp-links">
+										<!-- IF U_ACP -->
+											<a href="{U_ACP}" title="{L_ACP}">
+												<i class="icon fa-cogs fa-fw" aria-hidden="true"></i>{L_ACP_SHORT}
+											</a><span class="bullet">&bull;</span> 
+										<!-- ENDIF -->		
+										<!-- IF U_MCP -->
+											<a href="{U_MCP}" title="{L_MCP}">
+												<i class="icon fa-gavel fa-fw" aria-hidden="true"></i>{L_MCP_SHORT}
+											</a><span class="bullet">&bull;</span> 
+										<!-- ENDIF -->
+										<!-- IF S_REGISTERED_USER -->
+											<a href="{U_PROFILE}" title="{L_PROFILE}" role="menuitem">
+												<i class="icon fa-sliders fa-fw" aria-hidden="true"></i>{L_PROFILE}
+											</a><span class="bullet">&bull;</span> 
+										<!-- ENDIF -->
+									</li>
+								</ul>
+								<!-- EVENT navbar_header_user_profile_append -->
+							<!-- ELSE -->
+								<h5>Welcome, {L_GUEST}.</h5>
+								{$DISPLAY_AVATAR}
+								{$DISPLAY_TIME}
+							<!-- ENDIF -->
+						</div>
+					</div>					
+				</div>
 				<ul>
-					<!-- IF U_ACP -->
-						<li>
-							<a href="{U_ACP}" title="{L_ACP}" role="menuitem">
-								<i class="icon fa-cogs fa-fw" aria-hidden="true"></i><span>{L_ACP_SHORT}</span>
-							</a>
-						</li>
-					<!-- ENDIF -->
-					<!-- IF U_MCP -->
-						<li>
-							<a href="{U_MCP}" title="{L_MCP}" role="menuitem">
-								<i class="icon fa-gavel fa-fw" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
-							</a>
-						</li>
-					<!-- ENDIF -->
-
-					<!-- IF S_REGISTERED_USER -->
-						<!-- EVENT navbar_header_user_profile_prepend -->
-						<li id="username_logged_in" class="rightside <!-- IF CURRENT_USER_AVATAR --> no-bulletin<!-- ENDIF -->">
-							<!-- EVENT navbar_header_username_prepend -->
-							<div class="header-profile dropdown-container">
-								<a href="{U_PROFILE}" class="header-avatar dropdown-trigger"><!-- IF CURRENT_USER_AVATAR -->{CURRENT_USER_AVATAR} <!-- ENDIF --> {CURRENT_USERNAME_SIMPLE}</a>
-								<div class="dropdown">
-									<div class="pointer"><div class="pointer-inner"></div></div>
-									<ul class="dropdown-contents" role="menu">
+					<!-- IF S_REGISTERED_USER -->						
+						<li id="username_logged_in" class="rightside <!-- IF CURRENT_USER_AVATAR --> no-bulletin<!-- ENDIF -->">							
+							<div class="header-profile">
+								<div>
+									<ul>
 										<!-- IF U_RESTORE_PERMISSIONS -->
 											<li>
 												<a href="{U_RESTORE_PERMISSIONS}">
@@ -133,22 +206,13 @@
 												</a>
 											</li>
 										<!-- ENDIF -->
-
-									<!-- EVENT navbar_header_profile_list_before -->
-
-										<li>
-											<a href="{U_PROFILE}" title="{L_PROFILE}" role="menuitem">
-												<i class="icon fa-sliders fa-fw" aria-hidden="true"></i><span>{L_PROFILE}</span>
-											</a>
-										</li>
+										<!-- EVENT navbar_header_profile_list_before -->
 										<li>
 											<a href="{U_USER_PROFILE}" title="{L_READ_PROFILE}" role="menuitem">
 												<i class="icon fa-user fa-fw" aria-hidden="true"></i><span>{L_READ_PROFILE}</span>
 											</a>
 										</li>
-
 										<!-- EVENT navbar_header_profile_list_after -->
-
 										<li>
 											<a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x" role="menuitem">
 												<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
@@ -156,25 +220,8 @@
 										</li>
 									</ul>
 								</div>
-							</div>
-							<!-- EVENT navbar_header_username_append -->
-						</li>
-						<!-- IF S_DISPLAY_PM -->
-							<li class="rightside">
-								<a href="{U_PRIVATEMSGS}" role="menuitem">
-									<i class="icon fa-inbox fa-fw" aria-hidden="true"></i><span>{L_PRIVATE_MESSAGES} </span><strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
-								</a>
-							</li>
-						<!-- ENDIF -->
-						<!-- IF S_NOTIFICATIONS_DISPLAY -->
-							<li class="dropdown-container dropdown-{S_CONTENT_FLOW_END} rightside">
-								<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="dropdown-trigger">
-									<i class="icon fa-bell fa-fw" aria-hidden="true"></i><span>{L_NOTIFICATIONS} </span><strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
-								</a>
-								<!-- INCLUDE notification_dropdown.html -->
-							</li>
-						<!-- ENDIF -->
-						<!-- EVENT navbar_header_user_profile_append -->
+							</div>							
+						</li>						
 					<!-- ELSE -->
 						<li class="rightside">
 							<a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x" role="menuitem">
@@ -191,7 +238,6 @@
 						<!-- EVENT navbar_header_logged_out_content -->
 					<!-- ENDIF -->
 				</ul>
-
 				<ul id="nav-breadcrumbs" class="nav-breadcrumbs linklist navlinks" role="menubar">
 					<!-- DEFINE $MICRODATA = ' itemtype="http://data-vocabulary.org/Breadcrumb" itemscope=""' -->
 					<!-- EVENT overall_header_breadcrumbs_before -->
@@ -214,15 +260,17 @@
 				</ul>
 			</div>
 		</section>
-		<!-- EVENT overall_header_page_body_before -->		
+
+		<!-- EVENT overall_header_page_body_before -->	
+
 		<section id="page-body" class="page-body" role="main">
 			<div class="wrapper">
 				<a id="start_here" class="anchor"></a>
 				<!-- IF S_BOARD_DISABLED and S_USER_LOGGED_IN and (U_MCP or U_ACP) -->
-				<div id="information" class="rules">
-					<div class="inner">
-						<strong>{L_INFORMATION}{L_COLON}</strong> {L_BOARD_DISABLED}
+					<div id="information" class="rules">
+						<div class="inner">
+							<strong>{L_INFORMATION}{L_COLON}</strong> {L_BOARD_DISABLED}
+						</div>
 					</div>
-				</div>
 				<!-- ENDIF -->
 				<!-- EVENT overall_header_content_before -->
