Added some button styles

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -169,7 +169,7 @@
 									</li>
 								</ul>
 								<ul>
-									<li>
+									<li class="cp-links">
 										<!-- IF S_DISPLAY_PM -->
 											<a href="{U_PRIVATEMSGS}">
 												<i class="icon fa-inbox fa-fw" aria-hidden="true"></i>{L_PRIVATE_MESSAGES}<strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
@@ -181,6 +181,7 @@
 												<i class="icon fa-bell fa-fw" aria-hidden="true"></i>{L_NOTIFICATIONS}<strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
 											</a>
 											<div style="display: none;"><!-- INCLUDE notification_dropdown.html --></div>
+											<span class="bullet">&bull;</span> 
 										<!-- ENDIF -->
 									</li>
 									<li class="cp-links">
