--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -161,8 +161,8 @@
 				@include flex(grow);
 				a {
 					color: $color-01;
-					background: #547c45;
-					border-bottom: 3px solid #547c45 - #333;
+					background: $color-10;
+					text-shadow: 2px 1px 0 rgba($color-02, 1.0);
 					display: block;
 					padding: 5px 10px;
 					margin: 0 2.5px 5px 2.5px;
@@ -174,6 +174,7 @@
 			margin: 0 0 20px 0;
 		}
 		.cp-links {
+			margin: 0 0 10px 0;
 			.bullet:last-child {
 				display: none;
 			}
