--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -17,7 +17,7 @@ $color-06: #a4c27e; // green
 $color-07: #7ea8c2; // blue
 $color-08: #333333; // blackish
 $color-09: #fcfcce; // pale yellow
-$color-10: #333333; // 
+$color-10: #324d3c; // green
 $color-11: #333333; // 
 $color-12: #333333; // 
 $color-13: #333333; // 
