--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -155,25 +155,111 @@
 		.welcome-buttons {
 			text-align: center;
 			@include flex-flow(row wrap);
-			margin: 0 -3.5px 15px -3.5px;
 			li {
 				width: 50%;
 				@include flex(grow);
 				a {
-					color: $color-01;
-					background: $color-10;
-					text-shadow: 2px 1px 0 rgba($color-02, 1.0);
-					border: 5px solid transparent;
-					outline: 1px solid $color-11;
-					padding: 5px 10px;
-					background-clip: padding-box;
-					display: block;
-					margin: 0 3.5px 7px 3.5px;
-					&:hover {
-						outline: 1px solid $color-04;
+					i {
+						margin: 0 5px 0 0;
 					}
 				}				
 			}
+			&.style01 {
+				margin: 0 -3.5px 15px -3.5px;
+				li {
+
+					a {
+						color: $color-01;
+						background: $color-10;
+						text-shadow: 2px 1px 0 $color-02;
+						border: 5px solid transparent;
+						outline: 1px solid $color-11;
+						padding: 5px 10px;
+						background-clip: padding-box;
+						display: block;
+						margin: 0 3.5px 7px 3.5px;
+						&:hover {
+							outline: 1px solid $color-04;
+						}
+					}				
+				}
+			}
+			&.style02 {
+				margin: 0 -2.5px 15px -2.5px;
+				li {
+					a {
+						color: $color-01;
+						background: $color-10;
+						text-shadow: 2px 1px 0 $color-02;
+						border: 1px solid $color-11;
+						padding: 8px 10px;
+						display: block;
+						margin: 0 2.5px 7px 2.5px;
+						&:hover {
+							border: 1px solid $color-04;
+						}
+					}				
+				}
+			}
+			&.style03 {
+				margin: 0 -2.5px 15px -2.5px;
+				li {
+					a {
+						color: $color-01;
+						background: $color-10;
+						text-shadow: 2px 1px 0 $color-02;
+						padding: 10px;
+						display: block;
+						margin: 0 2.5px 7px 2.5px;
+					}				
+				}
+			}
+			&.style04 {
+				margin: 0 -2.5px 15px -2.5px;
+				li {
+					a {
+						color: $color-01;
+						background: $color-10;
+						text-shadow: 2px 1px 0 $color-02;
+						//border: 1px solid $color-10 + #000;
+						border-radius: 3px;
+						padding: 10px;
+						display: block;
+						margin: 0 2.5px 7px 2.5px;						
+					}				
+				}
+			}				
+			&.style05 {
+				margin: 0 -2.5px 15px -2.5px;
+				li {
+					a {
+						color: $color-01;
+						background: $color-10;
+						text-shadow: 2px 1px 0 $color-02;
+						border: 1px solid $color-10 + #000;
+						padding: 8px 10px;
+						display: block;
+						margin: 0 2.5px 7px 2.5px;
+						box-shadow: inset 0 0 20px 1px rgba($color-02, 0.70);
+						&:hover {
+							border: 1px solid $color-04;
+						}
+					}				
+				}
+			}	
+			&.style06 {
+				margin: 0 -2.5px 15px -2.5px;
+				li {
+					a {
+						color: $color-01;
+						background: $color-10;
+						border-bottom: 4px solid $color-11;
+						padding: 8px 10px;
+						display: block;
+						margin: 0 2.5px 7px 2.5px;
+					}				
+				}
+			}																														
 		}
 		ul {
 			list-style: none;
