--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -151,7 +151,7 @@
 								<!-- EVENT navbar_header_username_append -->
 								{$DISPLAY_AVATAR}
 								{$DISPLAY_TIME}
-								<ul class="welcome-buttons">
+								<ul class="welcome-buttons style02">
 									<li>
 										<a href="google.com"><i class="icon fa-cogs fa-fw" aria-hidden="true"></i>Text</a>
 									</li>
